--- a/src/css/GameLevel.css
+++ b/src/css/GameLevel.css
@@ -17,4 +17,5 @@
 
 .game-image-container input[type="image"] {
   width: 100%;
+  cursor: crosshair;
 }
